Opened 14 years ago

Closed 14 years ago

#7581 closed bug (fixed)

MIDI Pitchbend scaled wrongly

Reported by: Pete Owned by: korli
Priority: normal Milestone: R1
Component: Kits/Midi Kit Version: R1/alpha2
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

A small arithmetic error in SoftSynth.cpp made Pitchbends twice as big as they should be. (The default standard range is 2 semitones full-scale, but a 4-semitone shift was being generated.) Fixed in the attached patch.

Attachments (1)

softsynth.diff (527 bytes ) - added by Pete 14 years ago.
Fix for Synth Pitchbend range

Download all attachments as: .zip

Change History (3)

by Pete, 14 years ago

Attachment: softsynth.diff added

Fix for Synth Pitchbend range

comment:1 by Pete, 14 years ago

patch: 01

comment:2 by korli, 14 years ago

Resolution: fixed
Status: newclosed

Applied in hrev41777.

Note: See TracTickets for help on using tickets.