Patch from Pete Goodeve (ticket #7581): MIDI Pitchbend scaled wrongly.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41777 a95241bf-73f2-0310-859d-f6bbb57e9c96